<resources>
    <string name="app_name">Secretive</string>
    <string name="key_continue">Continue</string>
    <string name="pin_info">Your PIN is taken as a precaution. You can also use your device pin and fingerprint to login</string>
    <string name="create_pin">Please create a PIN</string>
    <string name="login_info">Login with your fingerprint or PIN</string>
    <string name="login_finger_print">Login using your fingerprint</string>
    <string name="wrong_pin">Wrong PIN !</string>
    <string name="err_pin">The registered PIN cannot be accessed</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_desc">See application details</string>
    <string name="theme">Theme</string>
    <string name="theme_desc">Change app theme</string>
    <string name="language">Language</string>
    <string name="save">Save</string>
    <string name="add_new_password">Add New Password</string>
    <string name="title">Title</string>
    <string name="password">Password</string>
    <string name="note">Note</string>
    <string name="choose_icon"> Choose an image related to your password</string>
    <string name="choose_icon_title">Choose image</string>
    <string name="return_home_page">Return home page</string>
    <string name="go_to_password_detail">Go to password detail</string>
    <string name="password_successfully_added">Password successfully added</string>
    <string name="login">Login</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="show_detail">Show detail</string>
    <string name="choose_action">Choose action</string>
    <string name="open_source_license">Open Source &amp; License</string>
    <string name="open_source_desc">This application is developed as open source</string>
    <string name="password_copied">Password copied</string>
    <string name="no_password_found">Nothing to show</string>
    <string name="click_to_add">Click to add</string>
    <string name="empty_err_messages">Value cannot be empty</string>
    <string name="successful">Successful</string>
    <string name="click_change_icon">Click to change your image</string>
    <string name="no_information">No information</string>
    <string name="pin">Pin</string>
    <string name="new_pin">New pin</string>
    <string name="confirm_pin">Confirm pin</string>
    <string name="change_pin">Change pin</string>
    <string name="change_pin_desc">Note that using a PIN is the second method, use a fingerprint for a more secure login</string>
    <string name="pin_confirmation_error">Pin confirmation error !</string>
    <string name="change_current_pin">Change your current pin</string>
    <string name="add_new_pass_desc">You can assign your password to an icon and add a note</string>
    <string name="edit_pass">Edit password</string>
    <string name="edit_pass_desc">Edit and save your password, if you want to delete it, visit the list screen</string>

    <string name="version" translatable="false">1.0.1</string>
    <string name="content_description" translatable="false">description</string>
</resources>