<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/av_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="success.json" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/nexa_regular"
            android:padding="8dp"
            android:text="@string/password_successfully_added"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/av_success" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_password_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/password"
            android:textAlignment="center"
            android:textSize="20sp"
            app:fontFamily="@font/nexa_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_success" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/main_color"
            android:fontFamily="@font/nexa_regular"
            android:padding="15dp"
            android:text="@string/return_home_page"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textAllCaps="false" />

        <Button
            android:id="@+id/btn_second"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/nexa_regular"
            android:padding="15dp"
            android:text="@string/go_to_password_detail"
            android:textColor="@color/main_color"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textAllCaps="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>