<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="vm"
            type="com.sn.secretive.ui.password.add.AddPasswordViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/nexa_regular"
            android:text="@string/add_new_password"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/til_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@color/background_color"
            android:hint="@string/title"
            app:boxStrokeColor="@color/input_layout_selector"
            app:hintTextColor="@color/secondary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_color"
                android:fontFamily="@font/nexa_regular"
                android:inputType="text"
                android:maxLength="15"
                android:textColor="@color/primary_text_color"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/background_color"
            android:hint="@string/password"
            app:boxStrokeColor="@color/input_layout_selector"
            app:hintTextColor="@color/secondary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_title"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/primary_text_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_color"
                android:fontFamily="@font/nexa_regular"
                android:inputType="textPassword"
                android:maxLength="15"
                android:textColor="@color/primary_text_color"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_note"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/background_color"
            android:hint="@string/note"
            app:boxStrokeColor="@color/input_layout_selector"
            app:hintTextColor="@color/secondary_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_color"
                android:fontFamily="@font/nexa_regular"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@color/primary_text_color"
                android:textCursorDrawable="@drawable/custom_cursor"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_rcv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="45dp"
            android:ellipsize="end"
            android:fontFamily="@font/nexa_regular"
            android:maxLines="1"
            android:text="@string/choose_icon"
            android:textColor="@color/secondary_text_color"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_note" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tv_rcv_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/main_btn_selector"
            android:enabled="@{vm.btnSaveEnabled}"
            android:fontFamily="@font/nexa_regular"
            android:padding="15dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:textAllCaps="false" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>